--- a/src/components/careers/CareerImage.css
+++ b/src/components/careers/CareerImage.css
@@ -1,35 +1,35 @@
 .career-image {
-  position: relative;
   width: 100%;
-  aspect-ratio: 16 / 9; 
-  background: url("../../assets/images/careers.png") center center / cover no-repeat;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   overflow: hidden;
 }
 
-/* Larger screens */
-@media (min-width: 1200px) {
-  .career-image {
-    aspect-ratio: 21 / 9; /* wider look for desktop */
-  }
+.career-image picture,
+.career-image img {
+  width: 100%;
+  height: auto;          /* Prevent distortion */
+  display: block;        /* Remove unwanted gaps */
+  object-fit: cover;     /* Crop nicely when needed */
 }
 
-/* Tablets */
-@media (max-width: 992px) {
-  .career-image {
-    aspect-ratio: 10 / 4;
-    background-position: center top;
-  }
+.career-img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
-/* Mobile */
-@media (max-width: 576px) {
-  .career-image {
-    aspect-ratio: auto;      
-    height: 250px;           
-    background-position: center;
-    background-size: cover
-  }
+.career-image {
+  width: 100%;
+  position: relative;
+}
+
+.career-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.career-img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
 }
