--- a/src/components/project1/ProjectProducts2.css
+++ b/src/components/project1/ProjectProducts2.css
@@ -6,6 +6,7 @@
   justify-content: center;
   padding: 50px 0;
   background: #ffffff;
+  padding: 20px;
 }
 
 /* ============================
@@ -25,7 +26,7 @@
 .project-container {
   display: grid;
   grid-template-columns: 20% 40% 40%;
-  align-items: end;        /* bottom align all boxes */
+  align-items: end; 
   column-gap: 35px;
     justify-items: stretch;
   width: 100%;
@@ -300,5 +301,19 @@
 
   .project-title {
     font-size: 22px;
+  }
+}
+
+@media (max-width: 767px) {
+  .info-box {
+    min-height: auto !important;
+    max-height: 220px;
+    font-size: 15px;
+    padding: 16px;
+    line-height: 1.3;
+  }
+
+  .info-box-content {
+    max-height: 200px;
   }
 }
