--- a/src/components/blog/BlogCard.css
+++ b/src/components/blog/BlogCard.css
@@ -12,7 +12,7 @@
   cursor: pointer;
   gap: 10px;
   max-width: 100%;
-  height: 100%; /* Add this */
+  /* height: 100%;  */
 }
 
 .blog-card-image {
