--- a/src/components/contactus/ContactImage.css
+++ b/src/components/contactus/ContactImage.css
@@ -1,7 +1,7 @@
 .Contact {
   position: relative;
   width: 100%;
-  aspect-ratio: 16 / 9;
+  /* aspect-ratio: 16 / 9; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,7 +10,6 @@
 
 .contact-img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
