--- a/src/components/project1/ProjectProducts2.css
+++ b/src/components/project1/ProjectProducts2.css
@@ -317,3 +317,19 @@
     max-height: 200px;
   }
 }
+
+.main-image-holder {
+  width: 100%;
+  /* height: 500px; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden; 
+}
+
+.main-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover !important; /* fill space without white gaps */
+  border-radius: 6px;
+}
