--- a/src/css/our_experince.css
+++ b/src/css/our_experince.css
@@ -64,8 +64,8 @@
 /* Desktop: 4 items in one row */
 @media (min-width: 992px) {
   .ourExp-col {
-    flex: 0 0 20%;
-    max-width: 20%;
+    flex: 0 0 22% !important;
+    max-width: 22% !important;
   }
 }
 
@@ -83,16 +83,53 @@
 /* Mobile Layout: full width */
 @media (max-width: 576px) {
   .ourExp-col {
-    flex: 0 0 100%;
-    max-width: 100%;
+    flex: 0 0 80% !important;
+    max-width: 80% !important;
+    display: flex;
+    justify-content: center !important;
+    align-items: center !important;
+
   }
+   
+   .ourExp-row {
+    justify-content: center !important;
+  }
+ 
 
   .ourExp-card {
     height: 150px;
+    width: 90%;
+    
   }
 
   .ourExp-card img {
-    width: 50px;
-    height: 50px;
+    width: 70px;
+    height: 70px;
+  }
+}
+
+.expe2 .office-text {
+  color: #000000 !important;
+}
+
+@media (max-width: 576px) {
+
+  .ourExp-row {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center cards */
+    gap: 15px; /* Space between cards */
+  }
+
+  .ourExp-col {
+    width: 80% !important; /* Smaller width */
+    max-width: 290px;     /* Prevent too large cards */
+    display: flex;
+    justify-content: center;
+  }
+
+  .ourExp-card {
+    width: 100%;
+    height: 180px; /* Adjust if needed */
   }
 }
