--- a/src/css/testmonials.css
+++ b/src/css/testmonials.css
@@ -118,9 +118,12 @@
 
 @media (max-width: 576px) {
 
+
   .testimonials-wrapper {
   gap: 15px;
-  margin-top: 10px;
+  margin-top: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
  
 }
   
